# sema-upgrade

./: ARCHITECTURE.md  Cargo.toml  README.md  flake.nix
schema/: sema-upgrade.concept.schema
src/: execution.rs  handover.rs  index.rs  lib.rs
src/migrations/: mod.rs
src/migrations/persona_spirit/: mod.rs  version_0_1_0_to_0_1_1.rs
tests/: handover.rs  prototype.rs
