[package]
name         = "sema-upgrade"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.85"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/sema-upgrade"
description  = "Retired prototype crate for Sema database schema upgrades."
publish      = false

[lib]
name = "sema_upgrade"
path = "src/lib.rs"

[dependencies]

[lints.rust]
unsafe_code = "forbid"
unused      = { level = "warn", priority = -1 }
dead_code   = "warn"
